[package]
name = "jade"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A PSX emulator, backed by vulkano for rendering"
license = "MIT"
repository = "https://github.com/Amjad50/Jade"
keywords = ["psx", "emulator", "vulkan", "rust"]
categories = ["emulators", "games-and-graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["debugger"]
debugger = ["jade-core/debugger", "dep:rustyline"]

[dependencies]
jade-core = { path = "./jade-core", version = "*" }
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
log = "0.4"
clap = { version = "4.2", features = ["derive"] }

vulkano = "0.33"
winit = "0.28"
vulkano-win = "0.33"
ringbuf = { version = "0.3.1", default-features = false, features = ["alloc"] }
cpal = { version = "0.15", default-features = false }

rustyline = { version = "11.0.0", default-features = false, optional = true }

[workspace]
members = [
    "jade-core"
]

[profile.dev]
opt-level = 2

[profile.release]
debug = true
