[package]
name = "trapezoid"
version = "0.1.3"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A PSX emulator, backed by vulkano for rendering"
license = "MIT"
repository = "https://github.com/Amjad50/trapezoid"
keywords = ["psx", "emulator", "vulkan", "rust"]
categories = ["emulators", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["debugger"]
debugger = ["trapezoid-core/debugger", "dep:rustyline", "dep:phf"]

[dependencies]
trapezoid-core = { path = "./trapezoid-core", version = "0.2" }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
log = "0.4"
clap = { version = "4.2", features = ["derive"] }

vulkano = "0.35"
winit = { version = "0.30", features = ["rwh_05"]}

rustyline = { version = "15.0", default-features = false, optional = true }
dynwave = "0.2"

phf = { version = "0.11", default-features = false, features = ["macros"], optional = true }

[workspace]
members = [
    "trapezoid-core"
]

[profile.dev]
opt-level = 2

[profile.release]
debug = true
