[package]
name = "psx-core"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
log = "0.4.14"
bitflags = "1.2.1"

vulkano = "0.27"
vulkano-shaders = "0.27"
