[package]
name = "psx-core"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debugger = ["dep:rustyline", "dep:phf"]

[dependencies]
byteorder = "1.4.2"
log = "0.4.14"
bitflags = "1.2.1"

vulkano = "0.29"
vulkano-shaders = "0.29"
bytemuck = { version = "1.9.1", features = ["derive"] }

crossbeam = "0.8.1"
rustyline = { version = "10.0.0", default-features = false, optional = true }
phf = { version = "0.11.1", default-features = false, optional = true, features = ["macros"] }
