[package]
name = "trapezoid-core"
version = "0.1.0"
authors = ["Amjad Alsharafi <amjadsharafi10@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A PSX emulator, backed by vulkano for rendering"
license = "MIT"
repository = "https://github.com/Amjad50/trapezoid"
keywords = ["psx", "emulator", "vulkan", "rust"]
categories = ["emulators", "games-and-graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debugger = []

[dependencies]
byteorder = "1.4.2"
log = "0.4"
bitflags = "2.1"

vulkano = "0.33"
vulkano-shaders = "0.33"

crossbeam = "0.8.1"
phf = { version = "0.11.1", default-features = false, features = ["macros"] }
